ws/log/build_2023-10-22_20-12-01/manual_control/stderr.log
  File "/mac_everything/ws/install/manual_control/lib/python3.8/site-packages/manual_control/controller_node.py", line 30
    if msg.buttons[0] and !self.has_enabled_drive:
                          ^
SyntaxError: invalid syntax

